Image width fix

--- a/california-roll.html
+++ b/california-roll.html
@@ -724,6 +724,9 @@
             #sidebar .social-links a:hover {
                 color:{color:Sidebar Accent};
             }
+            .post-photo img {
+                width:100%;
+            }
 
     </style>
 
